data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4030.wast
;; 9. **Illegal Table Reference Test**:    - **Description**: Define a `call_indirect` instruction referencing an illegal or uninitialized table entry.    - **Constraint Check**: Confirm the behavior traps with the illegal reference.    - **Stack Corruption Check**: Ensure the pre-execution stack remains unaltered post-trap.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $illegal-table-ref
      (call_indirect (type 0) (i32.const 2) (i32.const 1))
    )
  )
  "undefined element"
)